--- a/assets/templates/crypto/css/custom.css
+++ b/assets/templates/crypto/css/custom.css
@@ -219,7 +219,7 @@ body {
   padding-top: 60px;
   /*padding-right: 50px;*/
   width: 500px;
-  text-align: right;
+  /*text-align: right;*/
   font-size: 25px;
   font-weight: bold;
   font-style: italic;
