--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -162,9 +162,27 @@ body {
   height: 505px; }
 
 .slider__slide--one {
-  background: url("../img/slider-1.png") no-repeat top;
+  background: url("../img/slider-1.png") no-repeat center;
   background-size: cover; }
 
 .slider__slide--two {
-  background: url("../img/slider-2.png") no-repeat top;
+  background: url("../img/slider-2.png") no-repeat center;
   background-size: cover; }
+
+.slick-dots {
+  bottom: 20px; }
+
+.slick-dots li button {
+  border-radius: 50%; }
+
+.slick-dots li button:before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  background: white;
+  opacity: 1;
+  border-radius: 50%; }
+
+.slick-dots li.slick-active button:before {
+  background: #eeba1d;
+  opacity: 1; }
