--- a/aff/css/style.css
+++ b/aff/css/style.css
@@ -27,13 +27,6 @@ body {
   .header__flex img {
     width: 150px; } }
 
-@media screen and (max-width: 768px) {
-  .header__flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; } }
-
 .main-nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -59,6 +52,9 @@ body {
   border: 1px solid #ffd117;
   border-radius: 3px; }
 
+.main-nav__toggle {
+  display: none; }
+
 @media screen and (max-width: 1200px) {
   .main-nav ul {
     width: 550px; }
@@ -66,6 +62,113 @@ body {
     font-size: 13px; }
   .main-nav__partner {
     padding: 5px; } }
+
+@media screen and (max-width: 768px) {
+  .main-nav {
+    position: relative; }
+    .main-nav ul {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      width: auto;
+      margin: auto;
+      padding: 40px 0; }
+  .main-nav__item {
+    margin-bottom: 10px; }
+  .main-nav__toggle {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 15px;
+    width: 55px;
+    height: 50px;
+    font-size: 0;
+    border: none;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .main-nav__toggle:hover {
+      background-color: #ffd117; }
+  .main-nav--closed .main-nav__toggle::before {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 13px;
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
+    box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s; }
+  .main-nav--closed .main-nav__toggle:active::before {
+    background-color: rgba(255, 255, 255, 0.3);
+    -webkit-box-shadow: 0 8px 0 rgba(255, 255, 255, 0.3), 0 16px 0 rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 0 rgba(255, 255, 255, 0.3), 0 16px 0 rgba(255, 255, 255, 0.3); }
+  .main-nav--opened .main-nav__toggle {
+    top: 10px;
+    right: 20px;
+    z-index: 20; }
+    .main-nav--opened .main-nav__toggle::before, .main-nav--opened .main-nav__toggle::after {
+      content: "";
+      position: absolute;
+      top: 24px;
+      left: 15px;
+      width: 25px;
+      height: 2px;
+      background-color: #fff;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      -webkit-transition: background-color 0.5s;
+      transition: background-color 0.5s; }
+    .main-nav--opened .main-nav__toggle::before {
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg); }
+    .main-nav--opened .main-nav__toggle::after {
+      -webkit-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+    .main-nav--opened .main-nav__toggle:active::before, .main-nav--opened .main-nav__toggle:active::after {
+      background-color: rgba(255, 255, 255, 0.3); }
+  .main-nav--closed .main-nav__item {
+    display: none; }
+    .main-nav--closed .main-nav__item--active {
+      display: block;
+      text-align: center; }
+  .main-nav--opened {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    width: 90%;
+    margin: auto;
+    background-color: white;
+    -webkit-animation: menu-opened 0.5s;
+    animation: menu-opened 0.5s; }
+  .main-nav--nojs .main-nav__toggle {
+    display: none; }
+  .main-nav--nojs .container {
+    position: static;
+    height: auto; }
+  .main-nav--nojs .main-nav__item {
+    display: block; }
+    .main-nav--nojs .main-nav__item--active {
+      text-align: left; }
+  @-webkit-keyframes menu-opened {
+    0% {
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%); }
+    100% {
+      -webkit-transform: translateX(0%);
+      transform: translateX(0%); } }
+  @keyframes menu-opened {
+    0% {
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%); }
+    100% {
+      -webkit-transform: translateX(0%);
+      transform: translateX(0%); } } }
 
 .title {
   color: #fff;
