--- a/aff/css/style.css
+++ b/aff/css/style.css
@@ -325,6 +325,9 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-top: 46px; }
 
 .news__more {
