--- a/yes/app/sass/blocks/flex.scss
+++ b/yes/app/sass/blocks/flex.scss
@@ -2,4 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  
+  &--desc {
+    width: 780px;
+    margin: 100px 0 0 0;
+  }
 }
