--- a/yes/app/sass/blocks/situation.scss
+++ b/yes/app/sass/blocks/situation.scss
@@ -12,6 +12,26 @@
     height: 1200px;
     background: #e9e9e9;
   }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 1400px;
+    left: 29.6%;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: $main-blue;
+    animation: decorate-updown 1.5s infinite alternate;
+  }
+}
+
+@keyframes decorate-updown {
+  0% {}
+  
+  100% {
+    transform: translateY(336px);
+  }
 }
 
 .situation__heading {
@@ -76,6 +96,15 @@
 
 .situation__dot {
   color: $main-red;
+  animation: decorate-opacity 0.7s infinite alternate;
+}
+
+@keyframes decorate-opacity {
+  0% {}
+  
+  100% {
+    opacity: 0;
+  }
 }
 
 .situation__text {
