--- a/yes/app/sass/blocks/desc.scss
+++ b/yes/app/sass/blocks/desc.scss
@@ -1,3 +1,19 @@
+.desc {
+  position: relative;
+  padding: 150px 0 100px 0;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -80px;
+    right: 0;
+    width: 900px;
+    height: 610px;
+    background: url('../img/desc-mockup.png') no-repeat center / cover;
+    z-index: -1;
+  }
+}
+
 .desc__heading {
   display: block;
   margin: 0 0 30px 0;
@@ -8,7 +24,6 @@
 
 .desc__box {
   width: 200px;
-  padding: 0 0 100px 0;
   
   &:hover .desc__name,
   &:hover .desc__text {
