--- a/yes/app/sass/blocks/teachers.scss
+++ b/yes/app/sass/blocks/teachers.scss
@@ -76,7 +76,7 @@
 .teachers__photo {
   width: 100%;
   height: 300px;
-  margin: 0 0 30px 0;
+  margin: 0 0 20px 0;
 }
 
 .teachers__name {
@@ -88,7 +88,8 @@
 }
 
 .teachers__text {
-  padding: 0 20px 30px 20px;
+  margin: 0;
+  padding: 0 20px 20px 20px;
   font-size: 14px;
   font-weight: 300;
   line-height: 20px;
